hphp/test/zend/good/Zend/tests/bug38211.php
<?php
$test = 'test';
unset($$test);
echo "ok\n";
?>